--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
       <div class="site-info">
         <h1 class="site-name"><a href="//www.applyboard.com//">Welcome to ApplyBoard Cloud (ABC) DevOps</a></h1>
-        <p class="site-description">Awesome Jayat</p>
+        <p class="site-description">Awesome DevOps</p>
       </div>
 
       <nav>
