--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <link href="//www.applyboard.com/index.xml" rel="alternate" type="application/rss+xml" title="Welcome to ApplyBoard Cloud (ABC) Devops" />
 
     
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/style.min.css">
 </head>
 <body lang="en">
 <div class="wrapper-masthead">
