Cleaned up posts

--- a/public/index.html
+++ b/public/index.html
@@ -62,28 +62,17 @@ if (!doNotTrack) {
 <div>
 
   <h1>Welcome to ApplyBoard Cloud (ABC) Devops</h1>
-  <p>Welcome to my ABC Devops with some of my work in progress.</p>
+  <p>This is a resource for internal documentation.</p>
 
 
   
   <div>
     <div>
-      <a href="./post/my-first-post/">
-        <h3>Developer Environment Setup</h3>
+      <a href="./post/dev-setup/">
+        <h3></h3>
       </a>
-      <small>//applyboard.github.io/ab-hugo/post/my-first-post/</small>
-      2019-09-19
-    </div>
-    ApplyBoardCloud DevOps☁️ Developer Environment Setup Setup your AWS Account and Web Console access  Request an AWS Developer Account by contacting: jason.deland@applyboard.com Follow the instructions in the Welcome to Amason Web Services email you receive to setup your account  When complete you should be able to login into the AWS Dev Account via this link https://649614366484.signin.aws.amazon.com/console  Enable MFA following the AWS Guide: https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_mfa_enable_virtual.html  Note you need an Virtual MFA Device on your phone.
-  </div>
-  
-  <div>
-    <div>
-      <a href="./post/developer-environment-setup/">
-        <h3>My First Post</h3>
-      </a>
-      <small>//applyboard.github.io/ab-hugo/post/developer-environment-setup/</small>
-      2019-09-19
+      <small>//applyboard.github.io/ab-hugo/post/dev-setup/</small>
+      0001-01-01
     </div>
     ApplyBoardCloud ☁️ Developer Environment Setup Setup your AWS Account and Web Console access  Request an AWS Developer Account by contacting: jason.deland@applyboard.com Follow the instructions in the Welcome to Amason Web Services email you receive to setup your account  When complete you should be able to login into the AWS Dev Account via this link https://649614366484.signin.aws.amazon.com/console  Enable MFA following the AWS Guide: https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_mfa_enable_virtual.html  Note you need an Virtual MFA Device on your phone.
   </div>
