--- a/public/index.html
+++ b/public/index.html
@@ -69,10 +69,10 @@ if (!doNotTrack) {
   <div>
     <div>
       <a href="./post/dev-setup/">
-        <h3></h3>
+        <h3>DEveloper Environment Setup</h3>
       </a>
       <small>//applyboard.github.io/ab-hugo/post/dev-setup/</small>
-      0001-01-01
+      2019-09-20
     </div>
     ApplyBoardCloud ☁️ Developer Environment Setup Setup your AWS Account and Web Console access  Request an AWS Developer Account by contacting: jason.deland@applyboard.com Follow the instructions in the Welcome to Amason Web Services email you receive to setup your account  When complete you should be able to login into the AWS Dev Account via this link https://649614366484.signin.aws.amazon.com/console  Enable MFA following the AWS Guide: https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_mfa_enable_virtual.html  Note you need an Virtual MFA Device on your phone.
   </div>
