--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@ if (!doNotTrack) {
   <div>
     <div>
       <a href="./post/dev-setup/">
-        <h3>DEveloper Environment Setup</h3>
+        <h3>Developer Environment Setup</h3>
       </a>
       <small>//applyboard.github.io/ab-hugo/post/dev-setup/</small>
       2019-09-20
